# Axano-Support-Agent

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  PRD.md  README.md  docker-compose.yml  env.example  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/dashboard/: README.md  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/avatar/: page.tsx
apps/dashboard/app/conversations/: page.tsx
apps/dashboard/app/embed/: page.tsx
apps/dashboard/app/knowledge/: page.tsx
apps/dashboard/app/login/: page.tsx
apps/dashboard/components/: dashboard-shell.tsx
apps/dashboard/components/conversations/: message-bubble.tsx
apps/dashboard/i18n/: config.ts  request.ts
apps/dashboard/i18n/messages/: de.json  en.json
apps/dashboard/lib/: api.ts  avatar-config-api.ts  conversations-api.ts  knowledge-api.ts  tenant-api.ts
apps/widget/: README.md  demo.html  index.html  package.json  tsconfig.json  vite.config.ts
apps/widget/src/: conversation-storage.ts  livekit-client.ts  main.ts  session.ts  strings.ts  styles.ts  widget.tsx
docs/architecture/: local-infra.md  phase-0-e2e.md
docs/decisions/: 001-monorepo-tooling.md  002-credential-leak-acknowledged.md  003-phase-0-token-workaround.md  004-widget-bundle-size.md  005-direct-to-main-workflow.md  006-phase-1-dashboard-auth.md  007-screen-share-privacy.md
services/agent/: README.md  api_client.py  main.py  pyproject.toml
services/api/: drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
services/api/src/: app.module.ts  main.ts
services/api/src/auth/: auth.module.ts  current-tenant.decorator.ts  internal-service.guard.ts  internal-service.util.ts  jwt-secret.ts  session-or-api-key.guard.ts  session.guard.ts  tenant-api-key.guard.ts  tenant-api-key.util.spec.ts  tenant-api-key.util.ts
services/api/src/avatar-config/: avatar-config.controller.ts  avatar-config.module.ts  options.ts
services/api/src/conversations/: conversations.controller.ts  conversations.module.ts  conversations.service.ts
services/api/src/dashboard-auth/: dashboard-auth.controller.ts  dashboard-auth.module.ts
services/api/src/db/: db.module.ts  migrate.ts  seed.ts
services/api/src/health/: health.controller.ts
services/api/src/internal/: conversations.controller.ts  internal.module.ts
services/api/src/knowledge/: indexer.service.ts  knowledge.controller.ts  knowledge.module.ts  search.controller.ts  search.service.ts
services/api/src/livekit/: livekit.module.ts  room-agents.ts  room-service.factory.ts  token-issuer.service.ts
services/api/src/queue/: queue.module.ts
services/vision-worker/: README.md  main.py  pyproject.toml  ruff.toml
(+23 files in other folders)
