[project]
name = "avatardesk-agent"
version = "0.0.0"
description = "AvatarDesk realtime agent — orchestrates STT, LLM, TTS and Beyond Presence avatar streaming via livekit-agents."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }

dependencies = [
    "livekit-agents[anthropic,bey,deepgram,elevenlabs,silero]~=1.2",
    "python-dotenv~=1.0",
    "structlog~=24.4",
    "httpx~=0.28",
    # analyze_screen tool reads the latest scene description that the
    # vision-worker writes to `vision:latest:<conversation_id>` with a
    # 60-second TTL. Sticking to the same major as the worker keeps
    # client behavior consistent across the two services.
    "redis~=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.7",
    "black~=24.10",
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "api_client"]
